--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
 
                 </div>
         </main>
-        <script></script>
+        <script>
+            const inputBill = document.getElementById('input-bill')
+            const inputTip = document.getElementById('input-tip')
+            const inputPeople = document.getElementById('input-people')
+            const displayTip = document.getElementById('display-tip')
+            const displayTotal = document.getElementById('display-total')
+        </script>
     </body>
 </html>
