--- a/index.html
+++ b/index.html
@@ -32,6 +32,25 @@
             const inputPeople = document.getElementById('input-people')
             const displayTip = document.getElementById('display-tip')
             const displayTotal = document.getElementById('display-total')
+
+            inputBill.addEventListener('change',calculateTip)
+
+            inputTip.addEventListener('change',calculateTip)
+
+            inputPeople.addEventListener('change',calculateTip)
+
+            function calculateTip() {
+                const bill = parseFloat(inputBill.value)
+                const percent = parseFloat(inputTip.value)
+                const people = parseInt(inputPeople.value)
+
+                const tip = (bill * percent / 100) / people;
+                const total = bill + tip;
+                console.log(tip, total)
+            }
+
+
+
         </script>
     </body>
 </html>
